# my_advent_of_code

./: .flake8  Readme.md  pyproject.toml
2021/day1/: part1.py  part2.py
2021/day10/: main.py
2021/day11/: main.py
2021/day13/: main.py
2021/day2/: part1.py
2021/day3/: part1.py
2021/day4/: main.py  part1_2.py
2021/day5/: main.py
2021/day6/: main.py
2021/day7/: main.py
2021/day8/: main.py
2021/day9/: main.py
2021/day_01/: part1.py
2021/day_02/: part2.py
2021/day_03/: part1.py  part2.py
2021/day_07/: main.py
2021/day_08/: main.py
2021/day_09/: main.py
2021/day_12/: main.py
2021/day_14/: main.py
2022/day02/: part2.py
2022/day_01/: part1.py  part2.py
2022/day_02/: part1.py  part2.py
2022/day_03/: part1.py  part2.py
2022/day_04/: part1.py  part2.py
2022/day_06/: part1.py  part2.py
2022/day_07/: main.py
2022/day_08/: main.py
2022/day_09/: main.py
2022/day_10/: main.py
2024/day01/: main.py
2024/day_01/: main.py
2024/day_02/: main.py
2024/day_03/: main.py
2024/day_04/: main.py
2024/day_05/: main.py
2024/day_06/: main.py
2024/day_07/: main.py
2024/day_08/: main.py
2024/day_09/: main.py
2024/day_10/: main.py
2024/day_11/: main.py
