[tool.poetry]
name = "aventofcode"
version = "0.1.0"
description = ""
authors = ["pwalger <paulwalger@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^21.11b1"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119