[tool.poetry]
name = "aventofcode"
version = "0.1.0"
description = ""
authors = ["pwalger <paulwalger@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"
black = "^22.10.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
